--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.rackluxury.ferrari" >
-
+    package="com.rackluxury.ferrari">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -45,10 +44,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:replace="android:label" >
-
-
-
+        tools:replace="android:label">
+        <activity
+            android:name=".VideoCheckerActivity"
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -59,7 +58,7 @@
 
         <service
             android:name=".activities.ExpensiveNotificationService"
-            android:permission="com.google.android.c2dm.permission.SEND" >
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECIEVE" />
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -67,7 +66,7 @@
         </service>
 
         <activity android:name=".activities.FavouriteCategoriesActivity" />
-        <activity android:name=".activities.IntroActivity" >
+        <activity android:name=".activities.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -132,7 +131,7 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -143,7 +142,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".activities.FerrariAppWidgetProvider" >
+        <receiver android:name=".activities.FerrariAppWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -157,7 +156,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_path" />
@@ -329,7 +328,7 @@
             android:label="@string/account_saved_thing_activity_label"
             android:parentActivityName=".reddit.activities.RedditMainActivity"
             android:theme="@style/AppThemeReddit.Slidable" />
-        <activity android:name=".reddit.activities.ShareDataResolverActivity" >
+        <activity android:name=".reddit.activities.ShareDataResolverActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -387,7 +386,7 @@
             android:label="@string/search_subreddits_activity_label"
             android:parentActivityName=".reddit.activities.RedditMainActivity"
             android:theme="@style/AppThemeReddit.Slidable" />
-        <activity android:name=".reddit.activities.RedditLinkResolverActivity" >
+        <activity android:name=".reddit.activities.RedditLinkResolverActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -522,8 +521,7 @@
             android:name=".reddit.activities.RedditMainActivity"
             android:label="@string/application_name"
             android:theme="@style/AppThemeReddit.Launcher"
-            android:windowSoftInputMode="adjustPan" >
-        </activity>
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".reddit.activities.RedditLoginActivity"
             android:label="@string/login_activity_label"
@@ -556,7 +554,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.rackluxury.ferrari.reddit.provider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
@@ -565,7 +563,7 @@
             android:name="androidx.startup.InitializationProvider"
             android:authorities="${applicationId}.androidx-startup"
             android:exported="false"
-            tools:node="merge" >
+            tools:node="merge">
             <meta-data
                 android:name="com.crazylegend.crashyreporter.initializer.CrashyInitializer"
                 android:value="androidx.startup" />
